--- a/src/Template/Pages/Dev/Notes.htm
+++ b/src/Template/Pages/Dev/Notes.htm
@@ -1,10 +1,36 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<accordion-group>
+    <div class="card">
+        <div class="card-header p-1" accordion-group-toggle-on-click="relatedTables"><h2 class="card-title mb-0">Related Tables</h2></div>
+        <div class="card-body" accordion-group-content-item="relatedTables">
+            <accordion-group>
+                <div class="card">
+                    <div class="card-header p-1" accordion-group-toggle-on-click="updateSets"><h2 class="card-title mb-0">Update Sets</h2></div>
+                    <div class="card-body" accordion-group-content-item="updateSets">
+                        <dl>
+                            <dt>Table: <sn-instance-link relative-url="/sys_remote_update_set_list.do">Retrieved Update Sets</sn-instance-link></dt>
+                            <dd>
+                                Referenced By:
+                                <dl>
+                                    <dt>Update Preview Problems</dt>
+                                    <dd>
+                                        <sn-instance-link relative-url="/sys_update_preview_problem_list.do">/sys_update_preview_problem_list.do?sysparm_query=remote_update_set%3D=<var>sys_id</var></sn-instance-link>
+                                    </dd>
+                                    <dt>Customer Updates</dt>
+                                    <dd>
+                                        <sn-instance-link relative-url="/sys_update_xml_list.do">/sys_update_xml_list.do?sysparm_query=remote_update_set%3D=<var>sys_id</var></sn-instance-link>
+                                        <dl>
+                                            <dt>Update Preview Problems</dt>
+                                            <dd>
+                                                <sn-instance-link relative-url="/sys_update_preview_problem_list.do">/sys_update_preview_problem_list.do?sysparm_query=remote_update%3D=<var>sys_id</var></sn-instance-link>
+                                            </dd>
+                                        </dl>
+                                    </dd>
+                                </dl>
+                            </dd>
+                        </dl>
+                    </div>
+                </div>
+            </accordion-group>
+        </div>
+    </div>
+</accordion-group>
