--- a/src/Template/Pages/Home.htm
+++ b/src/Template/Pages/Home.htm
@@ -1,10 +1,8 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<ul>
+    <li><sn-instance-link>Cloud Development Instance</sn-instance-link></li>
+    <li><a href="https://hi.service-now.com/" target="_blank">ServiceNow Customer Service System (HI)</a></li>
+    <li><a href="https://docs.servicenow.com/category/london" target="_blank">ServiceNow Documentation (London)</a></li>
+    <li><a href="https://community.servicenow.com/" target="_blank">ServiceNow Community Website</a></li>
+    <li><a href="https://developer.servicenow.com/" target="_blank">ServiceNow Developers</a></li>
+    <li><git-instance-link text="GIT Repository"></git-instance-link></li>
+</ul>
