--- a/src/Template/Pages/Implementation/Change.htm
+++ b/src/Template/Pages/Implementation/Change.htm
@@ -1,10 +1,1 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+integrate the code of the UI Action "Risk Assessment" (/sys_ui_action.do?sys_id=8d300156d7033200532c24837e6103e8) with another action on the change before it gets to CAB, forcing the user to take the survey before proceeding
