--- a/src/Template/Pages/Implementation/Security.htm
+++ b/src/Template/Pages/Implementation/Security.htm
@@ -1,10 +1,32 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
+<div class="card">
+    <div class="card-header"><h2>Security Incident Module</h2></div>
+    <div class="card-body">
+        <div class="border border-warning">
+            <div class="alert-warning">
+                <strong>Category Field Weak Dependency Notice:</strong>
+                Changes to any names of security incident catalog categories and items must be coordinated with the category and subcategory choice fields in the
+                <sn-instance-link relative-url="/sys_db_object.do?sys_id=sn_si_incident&sysparm_refkey=name" to-nav="true">Security Incident (sn_si_incident)</sn-instance-link>
+                table.
+            </div>
 
-</body>
-</html>
+            The titles of all categories within the SEuciryt I
+
+            table must match the titles of the categories listed in the
+            <sn-instance-linklink relative-url="/sc_catalog.do?sys_id=8797c663ff123100158bffffffffff86" to-nav="true">Security Incident Catalog</sn-instance-linklink>
+            Categories are assigned to new security incidents according to the category and subcategory of the catalog item
+        </div>
+    </div>
+</div>
+
+        short_description Max Length 160
+        description
+        caller
+        category
+        subcategory
+
+        javascript:var uri = gs.action.getGlideURI();var sys_id=uri.get('sysparm_id');var gr = new GlideRecord('sc_cat_item');gr.get(sys_id);gr.short_description;
+
+        (new global.SMTemplates()).newFromCatalogItem(current, gs, '8797c663ff123100158bffffffffff86',
+        'The Security Incident department has been contacted regarding your request
+<br />The \'My Requests\' module provides access to this, and all of your other open requests
+<br />', producer);
