Recreated main app controller

--- a/src/Template/Pages/Home.htm
+++ b/src/Template/Pages/Home.htm
@@ -6,3 +6,4 @@
     <li><a href="https://developer.servicenow.com/" target="_blank">ServiceNow Developers</a></li>
     <li><git-instance-link text="GIT Repository"></git-instance-link></li>
 </ul>
+{{testMe}}
