--- a/src/Template/Pages/Dev/Git.htm
+++ b/src/Template/Pages/Dev/Git.htm
@@ -1,1 +1,164 @@
-(nothing, yet)
+<div class="card">
+    <div class="card-header"><h3 id="CredentialManagement">Credential Management</h3></div>
+    <div class="card-body">
+        <div class="card">
+            <div class="card-header"><h4 id="SetCredentialHelper">Set credential helper</h4></div>
+            <div class="card-body">
+                The following will configure git to use the <a href="https://github.com/Microsoft/Git-Credential-Manager-for-Windows" target="_blank">windows credential helper</a>:
+                <pre class="console-pane pre-scrollable"><code>git config --global credential.helper wincred</code></pre>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header"><h4 id="SetCredentialHelperLogin">Set login for credential helper</h4></div>
+            <div class="card-body">
+                When using the <a href="https://github.com/Microsoft/Git-Credential-Manager-for-Windows" target="_blank">windows credential helper</a>, and you need to use
+                alternate login credentials, you may find that it continues to try to authenticate using the same credentials, regardless of the erwine.email setting.
+                To force the <a href="https://github.com/Microsoft/Git-Credential-Manager-for-Windows" target="_blank">windows credential helper</a> to use alternate login credentials,
+                you can apply the following global configuration setting:
+                <pre class="console-pane pre-scrollable"><code>git config --global credential.microsoft.visualstudio.com.username <kbd>username</kbd></code></pre>
+                <em>Applying this setting to the local repository seemed to have no effect the last time it was tried.</em>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header"><h4 id="SetCredentialHelperLogin">Viewing Credentials</h4></div>
+            <div class="card-body">
+                From the command line run the command <samp class="pre-scrollable multi-line">control /name Microsoft.CredentialManager</samp>
+            </div>
+        </div>
+        <div class="card-deck">
+            <div class="card">
+                <div class="card-header"><h4>Set default email address</h4></div>
+                <div class="card-body">
+                    Using your personal private email address that is associated with the github account:
+                    <pre class="console-pane pre-scrollable"><code>git config --global user.email <kbd>email@address</kbd></code></pre>
+                    Using github-provided no-reply email address that is associated with the github account:
+                    <pre class="console-pane pre-scrollable"><code>git config --global user.email <kbd>userid</kbd>+<kbd>loginName</kbd>@users.noreply.github.com</code></pre>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header"><h4>Set default user name</h4></div>
+                <div class="card-body">
+                    This sets the default user name for all repositories where the user name is not configured (this is not the github username. Use user.email to associate with a
+                    specific account):
+                    <pre class="console-pane pre-scrollable"><code>git config --global user.name <kbd>user name</kbd></code></pre>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="card">
+    <div class="card-header"><h3>Managing Repositories</h3></div>
+    <div class="card-body">
+        <div class="card-deck">
+            <div class="card">
+                <div class="card-header"><h4>Push existing repository</h4></div>
+                <div class="card-body">
+                    First, create a new, totally empty remote github repository.
+                    <pre class="console-pane pre-scrollable"><code>git remote add origin <kbd>url_to_remote_repo</kbd>
+git push -u origin master</code></pre>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header"><h4>Clone/check out remote repository</h4></div>
+                <div class="card-body">
+                    <pre class="console-pane pre-scrollable"><code>cd <kbd>parentDirectory</kbd>
+git clone --recurse-submodules <kbd>url</kbd> <kbd>directoryName</kbd></code></pre>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="card">
+    <div class="card-header"><h3>Managing Branches</h3></div>
+    <div class="card-body">
+        <div class="card">
+            <div class="card-header"><h4>Minimal Cloning for copying to disconnected network</h4></div>
+            <div class="card-body">
+                If you wish to create a minimal clone of a repository for transfer to another disconnected network, you can use the following command:
+                <pre class="console-pane pre-scrollable"><code><span style="color:#00BF00">lerwi@DESKTOP-AQVRUTN </span><span style="color:#BF00BF">MINGW64 </span><span style="color:#BFBF00">~/Downloads</span>
+$ git clone -n --recursive https://github.com/erwinel/SNImplementationDocs.git
+Cloning into 'SNImplementationDocs'...
+remote: Enumerating objects: 808, done.
+remote: Counting objects: 100% (808/808), done.
+remote: Compressing objects: 100% (516/516), done.
+remote: Total 3819 (delta 399), reused 617 (delta 245), pack-reused 3011
+Receiving objects: 100% (3819/3819), 62.65 MiB | 7.08 MiB/s, done.
+Resolving deltas: 100% (2054/2054), done.
+
+<span style="color:#00BF00">lerwi@DESKTOP-AQVRUTN </span><span style="color:#BF00BF">MINGW64 </span><span style="color:#BFBF00">~/Downloads</span>
+$ cd SNImplementationDocs
+
+<span style="color:#00BF00">lerwi@DESKTOP-AQVRUTN </span><span style="color:#BF00BF">MINGW64 </span><span style="color:#BFBF00">~/Downloads</span><span style="color:#00BFBF"> (master)</span>
+$ git branch -r
+  <span style='color:#BF0000'>origin/HEAD</span> -&gt; origin/master
+  <span style='color:#BF0000'>origin/Schemas</span>
+  <span style='color:#BF0000'>origin/V1</span>
+  <span style='color:#BF0000'>origin/master</span>
+
+<span style="color:#00BF00">lerwi@DESKTOP-AQVRUTN </span><span style="color:#BF00BF">MINGW64 </span><span style="color:#BFBF00">~/Downloads</span><span style="color:#00BFBF"> (master)</span>
+$ git fetch origin Schemas:Schemas
+From https://github.com/erwinel/SNImplementationDocs
+ * [new branch]      Schemas    -&gt; Schemas
+
+<span style="color:#00BF00">lerwi@DESKTOP-AQVRUTN </span><span style="color:#BF00BF">MINGW64 </span><span style="color:#BFBF00">~/Downloads</span><span style="color:#00BFBF"> (master)</span>
+$ git fetch origin V1:V1
+From https://github.com/erwinel/SNImplementationDocs
+ * [new branch]      V1         -&gt; V1
+
+<span style="color:#00BF00">lerwi@DESKTOP-AQVRUTN </span><span style="color:#BF00BF">MINGW64 </span><span style="color:#BFBF00">~/Downloads</span><span style="color:#00BFBF"> (master)</span>
+$ git branch
+  Schemas
+  V1
+* <span style="color:#00BF00">master</span>
+
+</code></pre>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="card">
+    <div class="card-header"><h3>Managing Branches</h3></div>
+    <div class="card-body">
+        <div class="card">
+            <div class="card-header"><h4>Deleting a branch</h4></div>
+            <div class="card-body">
+                If you wish to delete a branch, you can use the following command:
+                <pre class="console-pane pre-scrollable"><code>git branch -D <kbd>name_of_branch</kbd></code></pre>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="card">
+    <div class="card-header"><h3>Common Local Git Repository Synchronization Issues</h3></div>
+    <div class="card-body">
+        <div class="card">
+            <div class="card-header"><h4>No upstream branch</h4></div>
+            <div class="card-body">
+                Many times, when a new local clone of a remote repository is created, sync and push commands will fail, saying there is no upstream branch.
+                This can be fixed with the following command, replacing "remoteName" with the name of the remote repository and "remoteBranch" with the name of the remote branch
+                (which is typically the name of the current branch):
+                <pre class="console-pane pre-scrollable"><code>git branch --set-upstream-to <kbd>remoteName</kbd>/<kbd>remoteBranch</kbd></code></pre>
+                So, if your remote repository name is "origin", and your current branch is "master", then the actual command would be:
+                <pre class="console-pane pre-scrollable"><code>git branch --set-upstream-to origin/master</code></pre>
+            </div>
+        </div>
+        <div class="card-deck">
+            <div class="card">
+                <div class="card-header"><h4>Getting the name of the remote repository</h4></div>
+                <div class="card-body">
+                    If you aren't sure what the name of the remote repository is, simply use the following command:
+                    <pre class="console-pane pre-scrollable"><code>git remote</code></pre>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header"><h4>Getting branch names</h4></div>
+                <div class="card-body">
+                    Typically, you would be able to see the name of the  current branch in the lower-left corner of the Visual Studio Code editor window. Alternatively, you can see what the name of the currently checked out branch is by using the following command:
+                    <pre class="console-pane pre-scrollable"><code>git branch</code></pre>
+                    You don't have to have a branch checked out in order to configure the upstream branch. To see a list of all the branch names use:
+                    <pre class="console-pane pre-scrollable"><code>git branch -a</code></pre>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
