--- a/src/Template/Pages/Dev/SiteDesign.htm
+++ b/src/Template/Pages/Dev/SiteDesign.htm
@@ -266,10 +266,8 @@
                         <div class="card">
                             <div class="card-header p-1"><h4>Example</h4></div>
                             <div class="card-body">
-                                <samp class="pre-scrollable multi-line">
-                                    Sample
-                                    Text
-                                </samp>
+                                <samp class="pre-scrollable multi-line">Sample
+Text</samp>
                             </div>
                         </div>
                         <div class="card">
@@ -289,10 +287,8 @@
                         <div class="card">
                             <div class="card-header p-1"><h4>Example</h4></div>
                             <div class="card-body">
-                                <code class="pre-scrollable multi-line">
-                                    current.update();
-                                    action.setRedirectURL(current);
-                                </code>
+                                <code class="pre-scrollable multi-line">current.update();
+action.setRedirectURL(current);</code>
                             </div>
                         </div>
                         <div class="card">
